--- a/celestine.html
+++ b/celestine.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <center>
+        <img src="https://res.cloudinary.com/celx/image/upload/v1566637298/kc3yd4udu0bkobicdrua.jpg" alt="photo">
         <h1>Celestine Stephen</h1>
         <center>web-developer</center>
     </center>
