--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="modal-contents">
         
             <div class="close">+</div> <br>
-            <form method="post" action="">
+            <form method="post" action="https://celxkodez.github.io/starthng/">
                 <h4>Contact Me!</h4>
                 <fieldset>        
                     <input placeholder="Name*" type="text" name="name" tabindex="" required minlength="4" >
